# RecClaw

./: .gitattributes  .gitignore  README.md  SOURCE_SHA256SUMS  clean_tree_manifest.json  clean_tree_verification_report.json  excluded_file_inventory.json  launch_architecture_v5_screen_30_0607.sh  migrated_file_allowlist.json  provenance_archive_manifest.json  pyproject.toml  recclaw_program.md  recclaw_program_v0_5.md  requirements-search-space.txt
archive/research_core_v3_20260708/: README.md  hash_manifest.yaml
artifacts/research_core/: bpr_rankcut_diagnostic_memory.yaml  phase13_closeout_manifest.yaml
configs/: action_space.yaml  bpr.yaml  bpr_lr_candidate.yaml  candidate_proposal_schema.yaml  candidate_registry.yaml  generic.yaml  lightgcn_metrics.yaml  reflection_policy.yaml  search_policy.yaml  task_ml1m.yaml
configs/candidates/: cand_bpr_hard_negative_margin.yaml  cand_bpr_hard_negative_mix.yaml  cand_bpr_long_tail_reweight.yaml  cand_bpr_margin_loss.yaml  cand_bpr_norm_constrained.yaml  cand_bpr_popularity_aware_margin.yaml  cand_bpr_popularity_aware_negative.yaml  cand_bpr_popularity_regularized.yaml  cand_lightgcn_aux_alignment_loss.yaml  cand_lightgcn_debiased_negative_sampling.yaml  cand_lightgcn_edge_dropout_residual_mix.yaml  cand_lightgcn_edge_dropout_residual_norm.yaml  cand_lightgcn_rank_aware_loss.yaml  (+7 more)
docs/: architecture_overview.md  phase1_ab002_experiment.md  reproducibility.md  trustworthy_evidence_line.md
notes/: candidate_library.md  candidate_proposal_workflow.md  experiment_log.md  method_change_space.md
recclaw_core/: README.md  __init__.py  candidate.py  contracts.py  foundry.py  memory.py  policy.py  validators.py  verifier.py
recclaw_ext/: __init__.py
results/: agent_state_summary.json  results.csv
schemas/: evidence_guard_envelope.schema.json  evidence_guard_result.schema.json  phase1_ab002_contract.schema.json  phase1_milestone_record.schema.json
scripts/: action_space.py  agent.py  build_experience_summary.py  collect_result.py  compare_runs.py  implement_candidate_proposal.py  mechanism_space.py  plan_research_line_comparison.py  promote_candidate_proposal.py  propose_candidate.py  research_line.py  run_baseline.sh  run_candidate.py  run_candidate.sh  run_custom_lightgcn_lw.py  run_reflection_pilot.py  sitecustomize.py  sync_to_server.sh  validate_candidate_proposal.py
tests/: test_agent_loop.py  test_bl_icf_mechanism_space.py  test_candidate_proposal.py  test_lint_recclaw_space.py  test_reflection_pilot.py  test_research_core_v0_1_unittest.py  test_research_line.py
(+150 files in other folders)
